<resources>
    <string name="app_name">Tampus</string>
    <string name="o_bien">o bien</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="continuar_con_facebook">Continuar con Facebook</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tiene_una_cuenta_reg_strese_ahora">¿No tiene una cuenta? Regístrese ahora</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="iniciar_sesi_n1">Iniciar Sesión</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_error_message">Error al iniciar sesión. Por favor, verifica tus credenciales.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>