<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imgTampusLogo"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tampus_logo" />


    <LinearLayout
        android:id="@+id/llInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTampusLogo">

        <TextView
            android:id="@+id/tvInicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_rounded_edit_text"
            android:hint="@string/correo_electr_nico"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/contrase_a"
            android:background="@drawable/background_rounded_edit_text"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvRegistroAhora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¿No tiene una cuenta? Regístrese ahora"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_button"
            android:text="@string/iniciar_sesi_n"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:backgroundTint="#FF9800" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/o_bien"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llInicioSesion" />
    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/continuar_con_google"
        android:textColor="#4285F4"
        android:drawableLeft="@drawable/ic_google_logo2"
        android:background="@drawable/background_button"
        android:textAllCaps="false"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="#f0f0f0"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginFacebook"
        android:drawablePadding="8dp"/>

    <Button
        android:id="@+id/btnLoginFacebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/continuar_con_facebook"
        android:drawableLeft="@drawable/ic_facebook_logo"
        android:textColor="#3B5998"
        android:background="@drawable/background_button"
        android:textAllCaps="false"
        android:layout_margin="24dp"
        app:backgroundTint="#f0f0f0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawablePadding="8dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>
